--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,3 +14,20 @@ a {
     color: aquamarine;
     font-size: 16px;
 }
+
+h2 {
+    font-family: verdana;
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+
+.text {
+    font-family: verdana;
+    font-size: 21px;
+    color: gray;
+}
+
+.footer {
+    text-align: right;
+}
